--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     image: postgres
     restart: always
 
-    volumes: 
+    volumes:
+        - ./csvs:/data
         - ./data/criacaoDoBanco.sql:/docker-entrypoint-initdb.d/criacaoDoBanco.sql
         - ./data/criacaoDasTabelasDeDimensao.sql:/docker-entrypoint-initdb.d/criacaoDasTabelasDeDimensao.sql
         - ./data/popularTabelas.sql:/docker-entrypoint-initdb.d/popularTabelas.sql
     environment:
       POSTGRES_PASSWORD: example
     ports: 
-        - 5432:5432
+        - 5433:5432
