--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
   db:
     image: postgres
     restart: always
-
     volumes:
         - ./csvs:/data
         - ./data/criacaoDoBanco.sql:/docker-entrypoint-initdb.d/criacaoDoBanco.sql
         - ./data/criacaoDasTabelasDeDimensao.sql:/docker-entrypoint-initdb.d/criacaoDasTabelasDeDimensao.sql
         - ./data/popularTabelas.sql:/docker-entrypoint-initdb.d/popularTabelas.sql
+        - ./data/popularIndicadoresComercio.sql:/docker-entrypoint-initdb.d/popularIndicadoresComercio.sql
+        - ./data/popularPagamentosAuxilioEmergencial.sql:/docker-entrypoint-initdb.d/popularPagamentosAuxilioEmergencial.sql
     environment:
       POSTGRES_PASSWORD: example
     ports: 
